--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "help": "node . --help"
   },
   "bin": {
-    "fcc-chart": "./main.js"
+    "fcc-chart": "main.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,9 @@
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "babel-preset-minify": "^0.5.1",
-    "squirrelly": "^7.7.0"
+    "squirrelly": "^7.7.0",
+    "babel-plugin-remove-import-export": "^1.1.0"
+  },
+  "devDependencies": {
   }
 }
